--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,9 @@
     "babelOptions": {
       "presets": ["next/babel"]
     }
+  },
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-img-element": "warn"
   }
 }
